feat: add support for hubs and authorities (HITS)
tl;dr: The HITS algorithm can be efficiently implemented by using:

* Symmetric local trust with hub-to-authority and authority-to-hub arcs,
* Uniform pre-trust,
* Alpha 0 (the pre-trust is used only as the initial vector), and
* Check frequency of 2 – the new parameter added in this commit

It has been possible to emulate HITS with EigenTrust in two ways,
by converting the HITS affinity matrix into
either a hub-to-authority-back-to-hub (H2A2H) local trust matrix
or a hub-to-authority-and-authority-to-hub (H2A+A2H) local trust matrix.
But each of them had own drawbacks that prevented its practical use.

The hub-to-authority-back-to-hub (H2A2H) local trust matrix is
essentially a symmetric similarity matrix between hubs,
based upon the common authorities they both link to.
H2A2H is defined as the affinity matrix multiplied by its own transpose,
both operands being column-normalized (each column adds up to 1.0).
However, given the original affinity matrix with N non-zero-entries,
the combined H2A2H local trust matrix a O(N^2) complexity,
rendering it impractical/unusable for large use cases.

The hub-to-authority-and-authority-to-hub (H2A+A2H) local trust matrix
is created simply by treating both hubs and authorities as peers and
establishing a symmetric directed arcs between each pair of hub and
authority in the original affinity matrix.
H2A+A2H has the same space complexity as the original affinity matrix
(with 2N non-zero entries), and is bipartite: An arc is always from
a hub to an authority or vice versa, and never within hubs or
authorities.

When running EigenTrust on such a bipartite local trust matrix,
the trust vector oscillates with a period of 2 iterations,
and converges either slowly, solely due to the dampening by pre-trust,
or with no pre-trust (a=0) as in the original HITS, never converges.
However, if we split iteration results into two series,
i.e. even-numbered (0/2/4/...) versus odd-numbered (1/3/5/
